--- a/LineChart/LineChart.css
+++ b/LineChart/LineChart.css
@@ -1,3 +1,7 @@
+.axis {
+  font: 10px sans-serif;
+}
+
 .axis path,
 .axis line {
   fill: none;
@@ -5,7 +9,8 @@
 }
 
 .x.axis path {
-  display: none;
+  fill: none;
+  stroke: #000;
 }
 
 .line {
